update to M1 Mac

--- a/.gitconfig
+++ b/.gitconfig
@@ -23,3 +23,11 @@
 	required = true
 [credential]
 	helper = osxkeychain
+[merge]
+	tool = vscode
+[mergetool "vscode"]
+	cmd = code --wait $MERGED
+[diff]
+	tool = vscode
+[difftool "vscode"]
+	cmd = code --wait --diff $LOCAL $REMOTE
