--- a/.gitconfig
+++ b/.gitconfig
@@ -12,6 +12,7 @@
 [core]
 	excludesfile = ~/.gitignore_global
 	editor = vim
+	ignorecase = false
 [filter "hawser"]
 	clean = git hawser clean %f
 	smudge = git hawser smudge %f
